--- a/css/estilo.css
+++ b/css/estilo.css
@@ -453,3 +453,64 @@ iframe{
          margin-top: 80px; 
     }
 }
+
+@media screen and (min-width:850px) {
+
+    .card-conteudo figure img{
+        height: 130px;
+        width: 210px;
+        
+    }
+    .titulo{
+        margin-top: 100px;
+
+    }
+    #tituloHome{
+        margin-top: 0;
+    }
+
+    .text-destque h2{
+        margin-top: -4px;
+    }
+
+    .produto{
+        height: 250px;
+    }
+    .acesse{
+        margin: 20px auto;
+    }
+
+    #conteudo-contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #conteudo article{
+        margin: 15px 5px;
+    }
+    .localizacao iframe{
+        height: 500px;
+    }
+    #localizacao-end{
+        height: 745px;
+
+    }
+
+    #tituloloc{
+        margin-top: 70px;
+    }
+}
+
+@media screen and (min-width:1000px) {
+    .conteudo{
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    nav{
+        justify-content: flex-end;
+        width: 68%;
+    }
+    #tituloloc{
+        margin-top: 70px;
+    }
+}
